--- a/BankStatementHelper/Sabatex.BankStatementHelper.csproj
+++ b/BankStatementHelper/Sabatex.BankStatementHelper.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 
-    <Version>2.0.3</Version>
+    <Version>3.0.0-rc1</Version>
     <Company>sabatex</Company>
     <Authors>Serhiy Lakas</Authors>
     <Copyright>2018, Serhiy Lakas</Copyright>
@@ -13,8 +13,14 @@
   </PropertyGroup>
 
   
-   <ItemGroup>
-    <PackageReference Include="sabatex.Extensions" Version="6.0.3"></PackageReference>
-  </ItemGroup>
-  
+   	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="sabatex.Extensions" Version="6.0.3"></PackageReference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+		<PackageReference Include="sabatex.Extensions" Version="6.0.3"></PackageReference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<PackageReference Include="sabatex.Extensions" Version="9.0.0-rc2"></PackageReference>
+	</ItemGroup>
+
 </Project>
