--- a/WebApp/Properties/launchSettings.json
+++ b/WebApp/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       },
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
     },
-    "BankServiceFor1C8": {
+    "local": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
