--- a/WebApp/WebAppAnyBanksUA.csproj
+++ b/WebApp/WebAppAnyBanksUA.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
-    <Version>8.0.0</Version>
+    <Version>9.0.0</Version>
 	<Copyright>Serhiy Lakas</Copyright>
     <UserSecretsId>a0ee92ff-d365-4c3f-ae66-44a9b12db8b1</UserSecretsId>
   </PropertyGroup>
   
   <ItemGroup>
-	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
-	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" PrivateAssets="all" />
-	  <PackageReference Include="Sabatex.RadzenBlazor" Version="5.3.5" />
-	  <PackageReference Include="System.Net.Http.Json" Version="8.0.1" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0" PrivateAssets="all" />
+	  <PackageReference Include="Sabatex.RadzenBlazor" Version="9.0.0-rc2" />
+	  <PackageReference Include="System.Net.Http.Json" Version="9.0.0" />
 	  <ProjectReference Include="..\BankStatementHelper\Sabatex.BankStatementHelper.csproj" />
   </ItemGroup>
 
