--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,9 @@ on:
     branches: [ master ]
     paths:
       - 'WebApp/AnyBanksUA.csproj'
-
+permissions:
+    contents: write
+    
 jobs:
   build:
     runs-on: ubuntu-latest
